Improved the report category content types and displaying the reports in a table

--- a/backend/api/report-category-status/models/report-category-status.settings.json
+++ b/backend/api/report-category-status/models/report-category-status.settings.json
@@ -16,8 +16,7 @@
       "type": "string"
     },
     "report_category": {
-      "model": "report-category",
-      "via": "report_category_status"
+      "model": "report-category"
     },
     "status": {
       "type": "enumeration",
