--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "strapi-plugin-content-type-builder": "3.6.8",
     "strapi-plugin-documentation": "3.6.8",
     "strapi-plugin-email": "3.6.8",
+    "strapi-plugin-graphql": "3.6.8",
     "strapi-plugin-i18n": "3.6.8",
     "strapi-plugin-upload": "3.6.8",
     "strapi-plugin-users-permissions": "3.6.8",
