--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,14 @@
     ]
   },
   "dependencies": {
+    "@apollo/react-hooks": "4.0.0",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
     "@fontsource/inter": "4.2.1",
     "@svgr/webpack": "5.5.0",
+    "apollo-boost": "0.4.9",
+    "axios": "0.21.4",
+    "graphql": "15.6.0",
     "next": "10.0.7",
     "next-seo": "4.20.0",
     "react": "17.0.1",
