Improved apollo client configuration and added middleware config for CORS requests

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -9,6 +9,7 @@ services:
     restart: unless-stopped
     environment:
       NODE_ENV: production
+      NEXT_PUBLIC_API_URL: https://admin.bizres.ch
 
   backend:
     build:
