--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,10 +32,12 @@
     "@svgr/webpack": "5.5.0",
     "apollo-boost": "0.4.9",
     "axios": "0.21.4",
+    "chart.js": "3.5.1",
     "graphql": "15.6.0",
     "next": "10.0.7",
     "next-seo": "4.20.0",
     "react": "17.0.1",
+    "react-chartjs-2": "3.1.0",
     "react-dom": "17.0.1",
     "twind": "0.15.4"
   },
