Added company info mail

--- a/backend/api/company/models/company.settings.json
+++ b/backend/api/company/models/company.settings.json
@@ -39,6 +39,9 @@
     "reports": {
       "via": "company",
       "collection": "report"
+    },
+    "info_mail": {
+      "type": "email"
     }
   }
 }
