Added node-red workflow docker container

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -30,3 +30,11 @@ services:
       - ./backend:/srv/app
     ports:
       - '1337:1337'
+
+  node-red-service:
+    build:
+      context: ./workflow
+    ports:
+      - "9880:1880"
+    environment:
+      - NODE_RED_ENABLE_PROJECTS=true  # must
