--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,8 @@
     "next": "10.0.7",
     "next-seo": "4.20.0",
     "react": "17.0.1",
-    "react-chartjs-2": "3.1.0",
     "react-dom": "17.0.1",
+    "recharts": "2.1.8",
     "twind": "0.15.4"
   },
   "devDependencies": {
