--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,10 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@fontsource/inter": "4.2.1",
+    "@mui/material": "5.2.4",
     "@svgr/webpack": "5.5.0",
     "apollo-boost": "0.4.9",
     "axios": "0.21.4",
@@ -38,6 +39,7 @@
     "next-seo": "4.20.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-intl": "5.24.0",
     "recharts": "2.1.8",
     "twind": "0.15.4"
   },
