--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "17.0.1",
     "@typescript-eslint/eslint-plugin": "4.15.1",
     "@typescript-eslint/parser": "4.15.1",
+    "autoprefixer": "10.4.0",
     "eslint": "7.20.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "7.2.0",
@@ -62,7 +63,9 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "lint-staged": "10.5.4",
+    "postcss": "8.4.5",
     "prettier": "2.2.1",
+    "tailwindcss": "3.0.7",
     "typescript": "4.4.3"
   }
 }
